--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,33 @@
-.App {
-  text-align: center;
+
+.CardsTable {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin: 5vh 10vw;
+  border-radius: 20vw;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.Card {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
+  border-radius: 8px;
+  padding: 0.5vw;
+  margin: 1vw;
+  width: 8vw;
+  height: 11.2vw;
+  background-color: antiquewhite;
 }
 
-.App-link {
-  color: #61dafb;
+.Card-topSuit {
+  align-self: flex-end;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Card-bottomSuit {
+  align-self: flex-start;
+}
+
+.Card-face {
+  font-size: 5vw;
 }
